# fastapi-agent-template

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  PYDANTIC_V2_MIGRATION.md  README.md  SOCKETIO_INTEGRATION.md  create_test_user.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_pydantic_fix.py
.cursor/rules/: fastapi.mdc
app/: __init__.py
app/agents/: soulcare_team.py
app/api/: deps.py
app/api/v1/: schemas.py
app/api/v1/routers/: auth.py  chat.py  conversations.py  health.py  tasks.py
app/core/: config.py  logging.py  security.py
app/infrastructure/: database.py  llm.py
app/models/: base.py  conversation.py  task.py  user.py
app/repositories/: __init__.py  base.py  conversation.py  task.py  user.py
app/services/: auth.py  chat.py  conversation.py  socketio_service.py  task.py
docs/: SOCKETIO_AGENT_SERICE.md
static/: socketio_test.html
tests/: conftest.py  test_auth.py  test_chat.py  test_youtube_search.py
